<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/connectButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onConnectButtonClicked"
            android:text="@string/Connect" >
        </Button>
 		<Button
            android:id="@+id/armButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onSendArmButtonClicked"
            android:text="@string/Unarm" >
        </Button>
        
 		<Button
            android:id="@+id/lauchLandButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onlauchLandButtonClicked"
            android:text="@string/Launch" >
        </Button>
        <Button
            android:id="@+id/headFreeButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onheadFreeButtonClicked"
            android:text="@string/Headfree" >
        </Button>

        <Button
            android:id="@+id/altHoldButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onaltHoldButtonClicked"
            android:text="@string/Altihold" >
        </Button>
         <Button
            android:id="@+id/accCaliButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onAccCaliButtonClicked"
            android:text="@string/IMUCali" >
        </Button>
    </LinearLayout>
    
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:orientation="horizontal"
        android:layout_marginLeft="8dp">

        <TextView android:id="@+id/pitchAngText" 
            android:layout_width="1dip" 
            android:layout_height="wrap_content" 
            android:layout_weight="1" 
            android:text="PitchAng:" />

        <TextView android:id="@+id/rollAngText" 
            android:layout_width="1dip" 
            android:layout_height="wrap_content" 
            android:layout_weight="1" 
            android:text="RollAng:" />

        <TextView android:id="@+id/yawAngText" 
            android:layout_width="1dip" 
            android:layout_height="wrap_content" 
            android:layout_weight="1" 
            android:text="YawAng:" />

    </LinearLayout>
    
     <LinearLayout android:layout_width="match_parent" 
        android:layout_height="wrap_content" 
        android:orientation="horizontal"
         android:layout_marginLeft="8dp">


         <TextView android:id="@+id/altText"
             android:layout_width="1dip"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="Alttitude:" />

         <TextView android:id="@+id/distanceText" 
            android:layout_width="1dip" 
            android:layout_height="wrap_content" 
            android:layout_weight="1" 
            android:text="Distance:" />

        <TextView android:id="@+id/voltageText" 
            android:layout_width="1dip" 
            android:layout_height="wrap_content" 
            android:layout_weight="1" 
            android:text="Voltage:" />
    </LinearLayout>
    
    <LinearLayout android:layout_width="match_parent" 
        android:layout_height="wrap_content" 
        android:orientation="horizontal"
        android:layout_marginLeft="8dp">

        <TextView android:id="@+id/yawText" 
            android:layout_width="1dip" 
            android:layout_height="wrap_content" 
            android:layout_weight="1" 
            android:text="Yaw:" />

        <TextView android:id="@+id/throttleText" 
            android:layout_width="1dip" 
            android:layout_height="wrap_content" 
            android:layout_weight="1" 
            android:text="Throttle:" />

        <TextView android:id="@+id/pitchText" 
            android:layout_width="1dip" 
            android:layout_height="wrap_content" 
            android:layout_weight="1" 
            android:text="Pitch:" />

        <TextView android:id="@+id/rollText" 
            android:layout_width="1dip" 
            android:layout_height="wrap_content" 
            android:layout_weight="1" 
            android:text="Roll:" />
    </LinearLayout>
	
    
    
    <com.test.Crazepony.MySurfaceView
        android:id="@+id/stickView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="0" />

</LinearLayout>